# dot-ddns

./: Cargo.toml  README.md
docs/: implementation-spec.md
packaging/: PKGBUILD  config.example.toml  dot-ddns.install  dot-ddns.service  dot-ddns.tmpfiles
src/: cli.rs  config.rs  daemon.rs  error.rs  links.rs  main.rs  resolvedctl.rs  resolver.rs  state.rs  systemd.rs
src/backend/: detect.rs  mod.rs  networkmanager.rs  resolved.rs
